[package]
name = "mygames"
version = "0.1.0"
authors = ["yykkxk<yykkxk@gmail.com>"]

keywords = ["rust", "ncurses"]
description = "Some small ncurses games written in Rust-language."
readme = "README.md"


[dependencies]
# rand = { path = "rand-0.3.13", version = "0.3.13" }
ncurses = "*"
rand = "*"

[[bin]]
name = "space_invaders"
path = "src/ncurses_space_invaders.rs"
# path = "src/ncurses_snake.rs"
